<!--
  ~  Copyright (c) 2018.
  ~  Development Lead: Cryptenet Ltd.
  ~  Developer Credit:
  ~     Alamgir Hossain,
  ~     Md. Rezwanur Rahman Khan,
  ~     Ashif Mujtoba
  ~  This project is under Apache License 2.0
  -->

<resources>
    <string name="app_name">Fikrah</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_registration" translatable="false">RegistrationActivity</string>
    <string name="title_activity_forgot" translatable="false">ForgotActivity</string>
    <string name="title_activity_code" translatable="false">CodeActivity</string>
    <string name="title_activity_set_password" translatable="false">SetPasswordActivity</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>

    <string name="cd_iv_logo" translatable="false">Logo</string>

    <string name="hint_et_name">Name</string>
    <string name="hint_et_email">Email</string>
    <string name="hint_et_pwd">Password</string>
    <string name="hint_et_confirm_pwd">Confirm Password</string>
    <string name="hint_et_address">Address</string>
    <string name="hint_et_bank_name">Bank Name</string>
    <string name="hint_et_bank_acc_name">Bank Account Name</string>
    <string name="hint_et_bank_acc_number">Bank Account Number</string>
    <string name="hint_et_forgot">Email</string>
    <string name="hint_et_new_pwd">New Password</string>
    <string name="hint_et_confirm_new_pwd">Confirm New Password</string>
    <string name="hint_et_code" translatable="false">00 00 00</string>

    <string name="spin_head_country">Country</string>
    <string name="spin_head_city">City</string>
    <string name="spin_label_acc_type">Sign Up as:</string>

    <string name="tv_forgot_pwd">Forgot your password?</string>
    <string name="tv_have_account">Already have an account?</string>
    <string name="tv_sign_in">Sign in</string>
    <string name="tv_sign_up">Sign up</string>
    <string name="tv_add_photo">Add Photo</string>
    <string name="tv_type_code">Type your code</string>
    <string name="tv_set_new_pwd">Set New Password</string>

    <string name="btn_go">Go</string>
    <string name="btn_done">Done</string>
    <string name="btn_next">Next</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>

    <string name="acc_type_investor">Investor</string>
    <string name="acc_type_initiator">Initiator</string>

    <string name="nav_man_request">Manage Requests</string>
    <string name="nav_language">Switch to Arabic</string>
    <string name="nav_conversation">Conversation</string>
    <string name="nav_report">Report An Issue</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_tc">Terms And Conditions</string>
    <string name="nav_rate">Rate This App</string>
    <string name="nav_about">About</string>
    <string name="nav_man_project">Manage Project</string>

    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>

    <string name="search_bar">Search Any Project</string>
    <string name="see_more">See More</string>
    <string name="add_plan">+ Add Plan</string>

    <string name="category">Project Category</string>
    <string name="project_title">Project Title</string>
    <string name="max_price">Project Price Maximum</string>
    <string name="min_price">Project Price Minimum</string>
    <string name="short_desc">Project Shot Description</string>
    <string name="long_desc">Project Detailed Description</string>
    <string name="access_price">Project Access Request Price</string>
    <string name="upload_file">Upload file</string>
    <string name="update_file">Update file</string>
    <string name="upload_cover">Upload Project Cover</string>
    <string name="update_cover">Update Project Cover</string>

    <string name="hint_et_note">Note</string>
    <string name="view_file">View File</string>
    <string name="update_profile">Update</string>

    <string name="hint_et_issue">Tell us about the issue …</string>
    <string name="hint_et_thread_msg">Aaa …</string>
    <string name="tag_accepted">Accepted</string>
    <string name="tag_pending">Pending</string>
    <string name="last_conversation">Last Conv: </string>
    <string name="investor_tag_line">I\'m interested to invest your plan</string>
    <string name="btn_confirm_req">Confirm Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="title_activity_message_request" translatable="false">MessageRequestActivity</string>

    <string name="toast_crash" translatable="false">App Crashed</string>
    <string name="request_for_details">Request for details</string>
    <string name="amount_to_be_paid_for_details">Amount to be paid for details</string>
    <string name="please_wait">Please wait…</string>
    <string name="plan_updated">Plan Updated.</string>
    <string name="plan_added">Plan Added.</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="pending">Pending</string>
    <string name="price">Price:</string>
    <string name="submitted">Submitted!</string>
    <string name="approved">Approved</string>
    <string name="plan_desc">Plan Description</string>
    <string name="edit_plan">Edit Plan</string>
    <string name="req_details">Request Details</string>
    <string name="submit_issue">Submit Issue</string>
    <string name="report_issue">Report Issue</string>
    <string name="thread_list">Thread List</string>
    <string name="trans_summary">Transaction Summary</string>
    <string name="thread_msg">Thread Message</string>


    <string name="no_all_plans">There are no plans to show!!</string>
    <string name="no_messages">You have no messages yet!!</string>
    <string name="no_man_projects">You have no approved plans!!</string>
    <string name="no_man_requests">You have no requests yet!!</string>
    <string name="no_search_result">No matching plans found!!</string>
    <string name="no_threads_found">No threads found</string>

    <string name="no_more_plans">No more plans to show!!</string>
    <string name="no_more_messages">You do not have any more messages!!</string>
    <string name="no_more_man_projects">You do not have any more approved plans!!</string>
    <string name="no_more_man_requests">You do not have any more requests!!</string>
    <string name="no_more_threads_found">No more threads found</string>


    <string name="none">None</string>
    <string name="error_message">Error getting message list, try again.</string>
    <string name="login_failed">Login failed, try again.</string>

    <string name="notification_channel_id" translatable="false">plans_update_channel</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>

    <string name="chk_agree_txt">I agree to the</string>
</resources>
