<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018.
  ~  Development Courtesy: Cryptenet Ltd.
  ~  Developer Credit: Alamgir Hossain, Nabil Shawkat
  ~  This project is under MIT license
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".set_password.SetPasswordActivity"
    tools:showIn="@layout/activity_set_password">

    <TextView
        android:id="@+id/tv_set_new_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_set_new_pwd"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline" />

    <EditText
        android:id="@+id/et_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_et_new_pwd"
        android:layout_marginRight="@dimen/margin_vertical_16"
        android:layout_marginLeft="@dimen/margin_vertical_16"
        android:layout_marginStart="@dimen/margin_vertical_16"
        android:layout_marginEnd="@dimen/margin_vertical_16"
        android:layout_marginTop="@dimen/margin_vertical_48"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_set_new_pwd"/>

    <EditText
        android:id="@+id/et_confirm_new_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_et_confirm_new_pwd"
        android:layout_marginRight="@dimen/margin_vertical_16"
        android:layout_marginLeft="@dimen/margin_vertical_16"
        android:layout_marginStart="@dimen/margin_vertical_16"
        android:layout_marginEnd="@dimen/margin_vertical_16"
        android:layout_marginTop="@dimen/margin_vertical_16"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_new_pwd"/>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/btn_done"
        android:textColor="@color/grey"
        android:background="@drawable/btn_shape_g"
        android:layout_marginRight="@dimen/margin_vertical_48"
        android:layout_marginLeft="@dimen/margin_vertical_48"
        android:layout_marginStart="@dimen/margin_vertical_48"
        android:layout_marginEnd="@dimen/margin_vertical_48"
        android:layout_marginTop="@dimen/margin_vertical_48"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_confirm_new_pwd" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30" />

</android.support.constraint.ConstraintLayout>