<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018.
  ~  Development Courtesy: Cryptenet Ltd.
  ~  Developer Credit: Alamgir Hossain, Nabil Shawkat
  ~  This project is under MIT license
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_horizontal_16">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/add_report"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/background_text"
            android:gravity="top"
            android:hint="@string/hint_et_issue"
            android:inputType="textMultiLine"
            android:lines="20"
            android:minLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/report_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/grey_button_selector"
            android:text="@string/btn_cancel"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_report" />

        <Button
            android:id="@+id/report_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/blue_button_selector"
            android:text="@string/btn_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/add_report" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

    </android.support.constraint.ConstraintLayout>
</LinearLayout>

